@@ -1,2 +1,3 @@
 --add-opens java.desktop/java.awt=ALL-UNNAMED
 --add-opens java.desktop/sun.awt.X11=ALL-UNNAMED
+--add-opens java.desktop/sun.awt.windows=ALL-UNNAMED
